# aws-robomaker-turtlebot3-tutorials

./: README.md
robot_ws/scripts/: rotate.py
robot_ws/src/robot_app/: CMakeLists.txt  package.xml  setup.py
robot_ws/src/robot_app/launch/: rotate.launch
simulation_ws/src/simulation_app/: CMakeLists.txt  package.xml
simulation_ws/src/simulation_app/launch/: example.launch  spawn_turtlebot.launch
simulation_ws/src/simulation_app/worlds/: example.world
