<?xml version="1.0"?>
<package format="2">
  <name>simulation_app</name>
  <version>1.0.0</version>
  <description>
    A custom AWS RoboMaker simulation package with a TurtleBot3 in an empty Gazebo world.
  </description>
  <license>MIT</license>
  <author email="buscaron@amazon.com">Cam</author>
  <maintainer email="buscaron@amazon.com">Cam</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <depend>turtlebot3_description</depend>
  <depend>turtlebot3_gazebo</depend>
  <depend>turtlebot3_simulations</depend>
  <exec_depend>gazebo</exec_depend>
</package>
